button text overflow fix

--- a/styles.css
+++ b/styles.css
@@ -71,8 +71,8 @@
     width: 115px;
     max-height: 35px;
     background: #1E3A8A;
-    padding: 10px;
-     text-align: center; 
+    padding: 1rem;
+    text-align: center; 
     border-radius: 5px;
     color: white;
     font-weight: bold;
